feat: migrate from TkinterWeb to pywebview for modern React support
- Add pywebview-based BrowserWindow implementation (browser_window_webview.py)
- Add pywebview IPC modules (main_webview.py, renderer_webview.py)
- Update IPC __init__.py to use webview implementations by default
- Fix window loading: defer URL loading until window.shown event fires
- Fix IPC: expose API methods individually to satisfy pywebview requirements
- Fix singleton issue: ensure same ipc_main instance used across modules
- Clean up TkinterWeb limitation warnings from React example
- Update React example UI to show "WebView" instead of "TkinterWeb"
- Remove debug logging from production code

This enables full modern React support with ES modules, Vite dev server,
and proper IPC communication between Python and JavaScript.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
 # Positron Framework Requirements
 
-# Core dependency - HTML/CSS rendering engine with FULL support
-# [full] includes: HTML, images, SVG, JavaScript (PythonMonkey), and requests
-tkinterweb[full]>=4.0.0
+# Core dependency - WebView for modern browser support
+# Uses WebView2 (Windows), WebKit (macOS), GTK WebKit (Linux)
+pywebview>=6.0
+
+# Optional: For enhanced features
+# pythonnet  # Already installed with pywebview on Windows
+
+# Legacy TkinterWeb support (deprecated, limited HTML 4.01/CSS 2.1)
+# tkinterweb[full]>=4.0.0
 
 # Development dependencies (optional)
 # Uncomment if you want to contribute to Positron development
