--- a/docs/package.json
+++ b/docs/package.json
@@ -14,7 +14,7 @@
     "fumadocs-mdx": "14.2.6",
     "fumadocs-ui": "16.5.0",
     "lucide-react": "^0.563.0",
-    "next": "16.1.6",
+    "next": "^16.1.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwind-merge": "^3.4.0"
