feat: Find an available port starting from start_port

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "positron-native"
 version = "0.1.0"
-description = "Build cross-platform desktop apps with React and Python"
+description = "Build cross-platform desktop apps with Python and modern web frameworks (React, Vue, Svelte, Next.js)"
 authors = [{ name = "tomlin7" }]
 license = { text = "MIT" }
 readme = "README.md"
