feat: Upgrade CLI to include installation, running steps

--- a/packages/create-positron-app/templates/nextjs-app/package.json
+++ b/packages/create-positron-app/templates/nextjs-app/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "app": "python main.py"
   },
   "dependencies": {
     "next": "16.1.6",
