--- a/packages/create-positron-app/templates/react-app/package.json
+++ b/packages/create-positron-app/templates/react-app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "app": "python main.py"
   },
   "dependencies": {
     "react": "^18.2.0",
